// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots should initially show the welcome screen 1`] = `
.c2 {
  display: block;
  border: 2px solid var(--primary-text-color);
  font-size: 12px;
  font-weight: bold;
  padding: 0.7em;
  background: var(--secondary-background-color);
  color: var(--secondary-text-color);
  background: var(--primary-background-color);
  color: var(--primary-text-color);
}

.c2:hover,
.c2:active,
.c2:focus {
  background: var(--accent-background-color);
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 122px;
  font-size: 36px;
  font-weight: 400;
  padding-right: 16px;
  padding-bottom: 2px;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c3 p {
  text-align: right;
  position: relative;
}

.c3 a {
  color: var(--secondary-text-color);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: min(20vh,400px);
}

.c1 .welcome-to {
  font-size: clamp(18px,1.7vw,42px);
  font-weight: 500;
  line-height: 100%;
  margin-bottom: max(-0.7vw,-10px);
}

.c1 .CoC {
  font-size: clamp(48px,4.5vw,110px);
  font-weight: 700;
  line-height: 100%;
  margin-bottom: max(-0.8vw,-20px);
  padding-right: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  background-color: var(--primary-background-color);
}

.c0 main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
}

.c0 .definition-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 3.2rem;
  font-weight: 700;
  line-height: 2.6rem;
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin-bottom: 90px;
}

.c0 .definition {
  font-size: 2.25rem;
  font-weight: 400;
}

.c0 .definition-container p {
  display: inline-block;
}

.c0 .button-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 6rem;
  font-weight: 900;
  width: 256px;
  height: 48px;
  font-size: 2.5rem;
}

.c0 .OR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  border-radius: 50%;
  padding: 16px;
  font-size: 2.25rem;
  font-weight: 700;
  width: 72px;
  height: 72px;
  margin-left: 93px;
  margin-right: 93px;
}

@media (max-width:1920px) {
  .c3 {
    height: 110px;
    font-size: 30px;
  }
}

@media (max-width:1440px) {
  .c3 {
    height: 90px;
    font-size: 26px;
  }
}

@media (max-width:1300px) {
  .c3 {
    height: 80px;
    font-size: 23px;
  }
}

@media (max-width:970px) {
  .c3 {
    text-align: center;
    height: 70px;
    font-size: 18px;
  }
}

@media (max-width:570px) and (min-height:501px) {
  .c3 {
    height: 120px;
    background-color: transparent;
  }

  .c3 p {
    text-align: center;
    font-size: 1.2rem;
    padding-bottom: 32px;
    color: var(--accent-text-color);
  }

  .c3 a {
    color: var(--accent-text-color);
    display: block;
  }
}

@media (max-height:500px) {
  .c3 {
    height: 50px;
    padding-bottom: 4px;
    padding-right: 10px;
  }

  .c3 p {
    font-size: 13px;
  }
}

@media (max-width:320px) {
  .c3 {
    font-size: 1rem;
    padding-right: 0px;
  }
}

@media (max-width:900px) {
  .c1 .CoC {
    margin-bottom: -8px;
  }
}

@media (max-width:600px) {
  .c1 .CoC {
    margin-bottom: -7px;
  }
}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {
  .c1 .welcome-to {
    display: none;
  }
}

@media (orientation:landscape) and (max-height:500px) {
  .c1 {
    height: 80px;
  }
}

@media (max-width:820px) {
  .c0 .definition-container {
    font-size: 2.2rem;
    line-height: 1.8rem;
    margin-bottom: 90px;
  }

  .c0 .definition {
    font-size: 1.7rem;
  }

  .c0 .button {
    width: 200px;
    height: 48px;
    font-size: 2.5rem;
  }

  .c0 .OR {
    width: 60px;
    height: 60px;
    margin-left: 70px;
    margin-right: 70px;
    font-size: 2rem;
  }
}

@media (max-width:700px),(max-width:900px) and (max-height:500px) {
  .c0 .definition-container {
    display: none;
  }

  .c0 .host-button {
    display: none;
  }

  .c0 .OR {
    display: none;
  }
}

<div
  className="c0 primary-background"
>
  <header
    className="c1"
    data-testid="header"
  >
    <p
      className="welcome-to"
      data-testid="welcome-text"
    >
      WELCOME TO
    </p>
    <h1
      className="CoC"
    >
      CARDS OF CAROUSAL
    </h1>
  </header>
  <main>
    <div
      className="definition-container"
    >
      <p
        className="word"
      >
        CAROUSAL 
        <span
          className="definition"
        >
          (n)
        </span>
      </p>
      <p
        className="definition"
      >
        a wild, drunken party or celebration : a drunken revel
      </p>
    </div>
    <div
      className="button-container"
    >
      <button
        className="c2 button"
        onClick={[Function]}
        type="button"
      >
        <p>
          JOIN
        </p>
      </button>
      <div
        className="OR"
      >
        OR
      </div>
      <button
        className="c2 button host-button"
        onClick={[Function]}
        type="button"
      >
        <p>
          HOST
        </p>
      </button>
    </div>
  </main>
  <footer
    className="c3"
    data-testid="footer"
  >
    <p>
      Card content thanks to:
       
      <a
        href="https://cardsagainsthumanity.com"
      >
        https://cardsagainsthumanity.com
      </a>
    </p>
    <p>
      Made by Odin students, with love:
       
      <a
        href="https://www.theodinproject.com"
      >
        https://www.theodinproject.com
      </a>
    </p>
  </footer>
</div>
`;

exports[`App snapshots should show the host screen after user has clicked the "host" button 1`] = `
<DocumentFragment>
  .c5 {
  display: block;
  border: 2px solid var(--primary-text-color);
  font-size: 12px;
  font-weight: bold;
  padding: 0.7em;
  background: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c5:hover,
.c5:active,
.c5:focus {
  background: var(--accent-background-color);
  cursor: pointer;
}

.c1 {
  background-image: url(inactiveHamburger.svg);
  background-size: cover;
  background-color: transparent;
  border: 0;
  width: 25px;
  height: 25px;
  cursor: pointer;
}

.c2 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .hamburger-container {
  position: absolute;
  right: 17px;
  top: 11px;
  z-index: 10100;
}

.c0 .host-layout-header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  height: 50px;
}

.c0 .host-layout-header h2 {
  position: relative;
  bottom: -1px;
  font-size: 1rem;
  line-height: 0.8rem;
}

.c0 .components {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c0 .components .left {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 200px;
  background-color: var(--primary-background-color);
  box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
}

.c0 .components .right {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 486px;
  padding: 40px;
  background-color: var(--primary-background-color);
  position: relative;
}

.c4 > div:not(:last-child) {
  margin-bottom: 24px;
}

.c7 .loading {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.c7 .loading div {
  display: inline-block;
  position: absolute;
  left: 8px;
  width: 16px;
  background: var(--primary-background-color);
  -webkit-animation: loading 1.2s cubic-bezier(0,0.5,0.5,1) infinite;
  animation: loading 1.2s cubic-bezier(0,0.5,0.5,1) infinite;
}

.c7 .loading div:nth-child(1) {
  left: 8px;
  -webkit-animation-delay: -0.24s;
  animation-delay: -0.24s;
}

.c7 .loading div:nth-child(2) {
  left: 32px;
  -webkit-animation-delay: -0.12s;
  animation-delay: -0.12s;
}

.c7 .loading div:nth-child(3) {
  left: 56px;
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  overflow-y: auto;
}

.c9 h1 {
  margin-left: auto;
  font-size: 4rem;
  line-height: 4rem;
  margin-top: -0.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  right: 0;
  top: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 24px 0 24px 60px;
}

.c10 .number-input-wrapper label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 400px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-weight: bold;
}

.c10 input[type='number'] {
  font-weight: bold;
  text-align: center;
  width: 80px;
}

.c10 .select-wrapper {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 .select-wrapper h2 {
  font-size: 1rem;
  font-weight: bold;
  height: 30px;
}

.c10 .select-wrapper .loader-wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c10 .card-packs {
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(auto-fill,minmax(420px,1fr));
  grid-template-rows: auto;
  border: none;
  margin: 0;
  padding: 0 0 16px 0;
}

.c10 .card-packs label {
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: auto;
}

.c10 input[type='checkbox'] {
  margin: 4px 11px auto 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 29px;
}

.c6 .join-code-title {
  font-size: 18px;
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  font-weight: 700;
  width: 97px;
  height: 21px;
}

.c6 .join-code {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 56px;
  font-weight: bold;
  color: var(--secondary-text-color);
  background-color: var(--secondary-background-color);
  width: 305px;
  height: 70px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c3 .player-list-wrapper {
  overflow-x: auto;
  border-bottom: 1px solid var(--primary-text-color);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3 .buttons-wrapper {
  display: block;
  margin-bottom: 20px;
}

.c3 .bottom-left-wrapper {
  margin: 20px auto 32px;
  position: relative;
  bottom: 0;
  left: 0;
  right: 0;
}

.c3 .join-code-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .host-pregame-button {
  padding: 0;
  background-color: var(--primary-background-color);
  color: var(--primary-text-color);
  margin: auto auto 12px;
}

.c3 .start-carousing {
  font-size: 0.875rem;
  padding: 16px 34px;
}

.c3 .close-game {
  font-size: 0.625rem;
  padding: 8px 20px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.c8 .game-description {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: var(--primary-background-color);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 24px;
  padding: 8px;
  border-radius: 5px;
  font-size: 1.8rem;
  font-weight: 700;
  box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
}

.c8 .game-description p {
  margin: 16px 0;
}

.c8 .top {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60%;
}

.c8 .bottom {
  height: 40%;
}

@media (max-width:1920px) {

}

@media (max-width:1440px) {

}

@media (max-width:1300px) {

}

@media (max-width:970px) {

}

@media (max-width:570px) and (min-height:501px) {

}

@media (max-height:500px) {

}

@media (max-width:320px) {

}

@media (max-width:900px) {

}

@media (max-width:600px) {

}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {

}

@media (orientation:landscape) and (max-height:500px) {

}

@media (max-width:820px) {

}

@media (max-width:700px),(max-width:900px) and (max-height:500px) {

}

@media (min-width:800px) {
  .c0 .host-layout-header {
    height: 130px;
  }

  .c0 .components .left {
    min-width: 450px;
  }

  .c0 .components .host-layout-header h2 {
    font-size: 2.5rem;
    margin-bottom: -4px;
    line-height: 2rem;
  }
}

@media (min-width:2000px) {
  .c0 .components .left {
    min-width: 700px;
  }

  .c0 .components .host-layout-header h2 {
    font-size: 3.5rem;
    margin-bottom: -35px;
    line-height: 7rem;
  }
}

@media (min-width:3500px) {
  .c0 .host-layout-header {
    height: 200px;
  }

  .c0 .components .left {
    min-width: 1100px;
  }

  .c0 .components .host-layout-header h2 {
    font-size: 6rem;
    margin-bottom: -25px;
    line-height: 7rem;
  }
}

@media only screen and (max-width:980px) {
  .c9 h1 {
    position: static;
  }
}

<div
    class="c0 primary-background"
  >
    <div
      class="hamburger-container"
    >
      <button
        class="c1"
      />
    </div>
    <div
      class="components"
    >
      <div
        class="left"
      >
        <header
          class="c2 host-layout-header"
        >
          <h2>
            CARDS OF CAROUSAL
          </h2>
        </header>
        <div
          class="c3"
        >
          <div
            class="player-list-wrapper"
          >
            <div
              class="c4"
              data-testid="playerList-container"
            />
          </div>
          <div
            class="bottom-left-wrapper"
          >
            <div
              class="buttons-wrapper"
            >
              <button
                class="c5 host-pregame-button"
              >
                <div
                  class="start-carousing"
                >
                  START CAROUSING
                </div>
              </button>
              <button
                class="c5 host-pregame-button"
              >
                <div
                  class="close-game"
                >
                  CLOSE GAME
                </div>
              </button>
            </div>
            <div
              class="join-code-wrapper"
            >
              <div
                class="c6"
              >
                <p
                  class="join-code-title"
                >
                  JOIN CODE:
                </p>
                <div
                  class="join-code"
                  data-testid="join-code"
                >
                  <div
                    class="c7"
                    color="1"
                    data-testid="loader"
                  >
                    <div
                      class="loading"
                    >
                      <div />
                      <div />
                      <div />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="right"
      >
        <div
          class="c8"
        >
          <div
            class="top"
          >
            <div
              class="game-description"
            >
              <p>
                Cards of Carousal is a game for lorem ipsum dolor.
              </p>
              <p>
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, doloribus quaerat incidunt excepturi odit eos!
              </p>
              <p>
                Qui delectus laboriosam aperiam maxime optio, architecto asperiores, at ullam.
              </p>
            </div>
          </div>
          <div
            class="bottom"
          >
            <div
              class="c9"
            >
              <h1>
                GAME SETTINGS
              </h1>
              <form
                class="c10"
              >
                <div
                  class="number-input-wrapper"
                >
                  <label
                    for="maxPlayers"
                  >
                    MAX PLAYERS
                    <input
                      id="maxPlayers"
                      max="12"
                      min="2"
                      name="maxPlayers"
                      type="number"
                      value="8"
                    />
                  </label>
                  <label
                    for="winningScore"
                  >
                    WINNING SCORE
                    <input
                      id="winningScore"
                      max="15"
                      min="1"
                      name="winningScore"
                      type="number"
                      value="7"
                    />
                  </label>
                </div>
                <div
                  class="select-wrapper"
                >
                  <h2>
                    SELECT CARD PACKS
                  </h2>
                  <div
                    class="loader-wrapper"
                  >
                    <div
                      class="c7"
                      color="1"
                      data-testid="loader"
                    >
                      <div
                        class="loading"
                      >
                        <div />
                        <div />
                        <div />
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App snapshots should show the player screen after user has clicked the "join" button 1`] = `
<DocumentFragment>
  .c2 {
  display: block;
  border: 2px solid var(--primary-text-color);
  font-size: 12px;
  font-weight: bold;
  padding: 0.7em;
  background: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c2:hover,
.c2:active,
.c2:focus {
  background: var(--accent-background-color);
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 122px;
  font-size: 36px;
  font-weight: 400;
  padding-right: 16px;
  padding-bottom: 2px;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c4 p {
  text-align: right;
  position: relative;
}

.c4 a {
  color: var(--secondary-text-color);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: min(20vh,400px);
}

.c1 .welcome-to {
  font-size: clamp(18px,1.7vw,42px);
  font-weight: 500;
  line-height: 100%;
  margin-bottom: max(-0.7vw,-10px);
}

.c1 .CoC {
  font-size: clamp(48px,4.5vw,110px);
  font-weight: 700;
  line-height: 100%;
  margin-bottom: max(-0.8vw,-20px);
  padding-right: 5px;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: grid;
  height: 100%;
  background-color: var(--primary-background-color);
  grid-template-rows: 130px 1fr auto;
  grid-template-columns: 1fr;
}

.c0 main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .player-join-form-container {
  width: 100%;
  max-width: 1650px;
  margin: 0 auto;
  text-align: center;
  padding: 20px;
  margin-top: -88px;
}

.c0 .player-join-form {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 60px 60px 40px 1fr;
}

.c0 .player-join-name-input {
  grid-row: 1;
  grid-column: 1;
}

.c0 .player-join-code-input {
  grid-row: 2;
  grid-column: 1;
}

.c0 .player-join-name-input,
.c0 .player-join-code-input {
  margin: 0 16px;
}

.c0 input {
  text-transform: uppercase;
  font-size: 1.2rem;
  border: none;
  border-bottom: 2px solid var(--primary-text-color);
  padding-top: 40px;
  background: transparent;
  padding-left: 0;
}

.c0 input::-webkit-input-placeholder {
  color: var(--primary-text-color);
  font-size: 1.2rem;
}

.c0 input::-moz-placeholder {
  color: var(--primary-text-color);
  font-size: 1.2rem;
}

.c0 input:-ms-input-placeholder {
  color: var(--primary-text-color);
  font-size: 1.2rem;
}

.c0 input::placeholder {
  color: var(--primary-text-color);
  font-size: 1.2rem;
}

.c3 {
  grid-row: 4;
  margin: 0 auto;
  width: 260px;
  height: 72px;
  border-radius: 2px;
  background-color: var(--secondary-background-color);
  font-size: 1.2rem;
  text-transform: uppercase;
}

@media (max-width:1920px) {
  .c4 {
    height: 110px;
    font-size: 30px;
  }
}

@media (max-width:1440px) {
  .c4 {
    height: 90px;
    font-size: 26px;
  }
}

@media (max-width:1300px) {
  .c4 {
    height: 80px;
    font-size: 23px;
  }
}

@media (max-width:970px) {
  .c4 {
    text-align: center;
    height: 70px;
    font-size: 18px;
  }
}

@media (max-width:570px) and (min-height:501px) {
  .c4 {
    height: 120px;
    background-color: transparent;
  }

  .c4 p {
    text-align: center;
    font-size: 1.2rem;
    padding-bottom: 32px;
    color: var(--accent-text-color);
  }

  .c4 a {
    color: var(--accent-text-color);
    display: block;
  }
}

@media (max-height:500px) {
  .c4 {
    height: 50px;
    padding-bottom: 4px;
    padding-right: 10px;
  }

  .c4 p {
    font-size: 13px;
  }
}

@media (max-width:320px) {
  .c4 {
    font-size: 1rem;
    padding-right: 0px;
  }
}

@media (max-width:900px) {
  .c1 .CoC {
    margin-bottom: -8px;
  }
}

@media (max-width:600px) {
  .c1 .CoC {
    margin-bottom: -7px;
  }
}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {
  .c1 .welcome-to {
    display: none;
  }
}

@media (orientation:landscape) and (max-height:500px) {
  .c1 {
    height: 80px;
  }
}

@media (max-width:820px) {

}

@media (max-width:700px),(max-width:900px) and (max-height:500px) {

}

@media screen and (min-width:646px) {
  .c0 .player-join-form-container {
    padding-left: 40px;
    padding-right: 40px;
  }

  .c0 .player-join-form {
    grid-template-columns: 52% 48%;
    grid-template-rows: 60px 60px 40px 1fr;
  }

  .c0 .player-join-name-input {
    grid-row: 1;
    grid-column: 1 / 3;
  }

  .c0 .player-join-code-input {
    grid-row: 2;
    grid-column: 1 / 3;
  }

  .c0 .player-join-name-input,
  .c0 .player-join-code-input {
    margin: 0 16px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    grid-template-rows: 180px 1fr auto;
  }

  .c0 .player-join-form-container {
    max-width: 800px;
  }

  .c0 .player-join-form {
    grid-template-rows: 60px 60px 1fr;
  }

  .c0 .player-join-name-input {
    grid-row: 1;
    grid-column: 1;
  }

  .c0 .player-join-code-input {
    grid-row: 1;
    grid-column: 2;
  }
}

@media screen and (min-width:970px) {
  .c0 input {
    font-size: 1.2rem;
    border-bottom: 2px solid var(--primary-text-color);
    padding-top: 40px;
  }

  .c0 input::-webkit-input-placeholder {
    font-size: 1.2rem;
  }

  .c0 input::-moz-placeholder {
    font-size: 1.2rem;
  }

  .c0 input:-ms-input-placeholder {
    font-size: 1.2rem;
  }

  .c0 input::placeholder {
    font-size: 1.2rem;
  }
}

@media screen and (min-width:2000px) {
  .c0 .player-join-form-container {
    max-width: 1000px;
  }

  .c0 .player-join-form {
    grid-template-rows: 60px 88px 1fr;
  }

  .c0 input {
    font-size: 1.6rem;
    border-bottom: 2px solid var(--primary-text-color);
    padding-top: 36px;
  }

  .c0 input::-webkit-input-placeholder {
    font-size: 1.6rem;
  }

  .c0 input::-moz-placeholder {
    font-size: 1.6rem;
  }

  .c0 input:-ms-input-placeholder {
    font-size: 1.6rem;
  }

  .c0 input::placeholder {
    font-size: 1.6rem;
  }

  .c0 .player-join-name-input {
    margin-right: 16px;
  }

  .c0 .player-join-code-input {
    margin-left: 16px;
  }
}

@media screen and (min-width:2560px) {
  .c0 .player-join-form-container {
    max-width: 1650px;
    padding: 20px 80px 20px 80px;
  }

  .c0 .player-join-form {
    grid-template-rows: 90px 160px 1fr;
  }

  .c0 input {
    font-size: 4.4rem;
    font-weight: 500;
    border-bottom: 4px solid var(--primary-text-color);
    padding-top: 24px;
    padding-left: 0;
  }

  .c0 input::-webkit-input-placeholder {
    font-weight: 500;
    font-size: 4.4rem;
  }

  .c0 input::-moz-placeholder {
    font-weight: 500;
    font-size: 4.4rem;
  }

  .c0 input:-ms-input-placeholder {
    font-weight: 500;
    font-size: 4.4rem;
  }

  .c0 input::placeholder {
    font-weight: 500;
    font-size: 4.4rem;
  }

  .c0 .player-join-name-input {
    margin-right: 32px;
  }

  .c0 .player-join-code-input {
    margin-left: 32px;
  }
}

@media screen and (max-height:320px) {
  .c0 .player-join-form-container {
    margin-top: -20px;
  }

  .c0 .player-join-form {
    grid-template-rows: 50px 40px 1fr;
  }

  .c0 input {
    padding-top: 30px;
  }
}

@media screen and (min-height:321px) and (max-height:375px) {
  .c0 {
    grid-template-rows: 60px 1fr auto;
  }

  .c0 .player-join-form-container {
    margin-top: -20px;
  }
}

@media screen and (min-height:376px) and (max-height:414px) {
  .c0 .player-join-form-container {
    margin-top: -10px;
  }
}

@media screen and (min-height:415px) and (max-height:567px) {
  .c0 .player-join-form-container {
    margin-top: 10px;
  }

  .c0 .player-join-form {
    grid-template-rows: 60px 60px 1fr;
  }

  .c0 input {
    padding-top: 40px;
  }
}

@media screen and (max-height:567px) {
  .c0 {
    grid-template-rows: 60px 1fr auto;
  }

  .c0 .player-join-form {
    grid-template-columns: 52% 48%;
  }

  .c0 .player-join-name-input {
    grid-row: 1;
    grid-column: 1;
  }

  .c0 .player-join-code-input {
    grid-row: 1;
    grid-column: 2;
  }
}

@media screen and (min-width:646px) {
  .c3 {
    grid-column: 1 / 3;
  }
}

@media screen and (min-width:786px) {
  .c3 {
    grid-row: 4;
  }
}

@media screen and (min-width:970px) {
  .c3 {
    font-size: 1.2rem;
    width: 288px;
    height: 80px;
  }
}

@media screen and (min-width:2000px) {
  .c3 {
    font-size: 1.5rem;
    width: 360px;
    height: 100px;
  }
}

@media screen and (min-width:2560px) {
  .c3 {
    font-size: 4rem;
    width: 900px;
    height: 225px;
  }
}

@media screen and (max-height:567px) {
  .c3 {
    grid-column: 1 / 3;
    grid-row: 3;
  }
}

<div
    class="c0 primary-background"
    data-testid="player-join-container"
  >
    <header
      class="c1"
      data-testid="header"
    >
      <h1
        class="CoC"
      >
        CARDS OF CAROUSAL
      </h1>
    </header>
    <main>
      <div
        class="player-join-form-container"
      >
        <form
          class="player-join-form"
        >
          <input
            class="player-join-name-input"
            maxlength="12"
            placeholder="name"
            required=""
            type="text"
            value=""
          />
          <input
            class="player-join-code-input"
            maxlength="4"
            placeholder="join code"
            required=""
            type="text"
            value=""
          />
          <button
            class="c2 c3"
            data-testid="player-join-submit-button"
            type="submit"
          >
            Let's Carouse!
          </button>
        </form>
      </div>
    </main>
    <footer
      class="c4"
      data-testid="footer"
    >
      <p>
        Card content thanks to: 
        <a
          href="https://cardsagainsthumanity.com"
        >
          https://cardsagainsthumanity.com
        </a>
      </p>
      <p>
        Made by Odin students, with love: 
        <a
          href="https://www.theodinproject.com"
        >
          https://www.theodinproject.com
        </a>
      </p>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`App snapshots should show the welcome screen after user has clicked elements other than the "host" or "join" buttons 1`] = `
<DocumentFragment>
  .c2 {
  display: block;
  border: 2px solid var(--primary-text-color);
  font-size: 12px;
  font-weight: bold;
  padding: 0.7em;
  background: var(--secondary-background-color);
  color: var(--secondary-text-color);
  background: var(--primary-background-color);
  color: var(--primary-text-color);
}

.c2:hover,
.c2:active,
.c2:focus {
  background: var(--accent-background-color);
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 122px;
  font-size: 36px;
  font-weight: 400;
  padding-right: 16px;
  padding-bottom: 2px;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c3 p {
  text-align: right;
  position: relative;
}

.c3 a {
  color: var(--secondary-text-color);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: min(20vh,400px);
}

.c1 .welcome-to {
  font-size: clamp(18px,1.7vw,42px);
  font-weight: 500;
  line-height: 100%;
  margin-bottom: max(-0.7vw,-10px);
}

.c1 .CoC {
  font-size: clamp(48px,4.5vw,110px);
  font-weight: 700;
  line-height: 100%;
  margin-bottom: max(-0.8vw,-20px);
  padding-right: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  background-color: var(--primary-background-color);
}

.c0 main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
}

.c0 .definition-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 3.2rem;
  font-weight: 700;
  line-height: 2.6rem;
  -webkit-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  transform: rotate(-5deg);
  margin-bottom: 90px;
}

.c0 .definition {
  font-size: 2.25rem;
  font-weight: 400;
}

.c0 .definition-container p {
  display: inline-block;
}

.c0 .button-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 6rem;
  font-weight: 900;
  width: 256px;
  height: 48px;
  font-size: 2.5rem;
}

.c0 .OR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  border-radius: 50%;
  padding: 16px;
  font-size: 2.25rem;
  font-weight: 700;
  width: 72px;
  height: 72px;
  margin-left: 93px;
  margin-right: 93px;
}

@media (max-width:1920px) {
  .c3 {
    height: 110px;
    font-size: 30px;
  }
}

@media (max-width:1440px) {
  .c3 {
    height: 90px;
    font-size: 26px;
  }
}

@media (max-width:1300px) {
  .c3 {
    height: 80px;
    font-size: 23px;
  }
}

@media (max-width:970px) {
  .c3 {
    text-align: center;
    height: 70px;
    font-size: 18px;
  }
}

@media (max-width:570px) and (min-height:501px) {
  .c3 {
    height: 120px;
    background-color: transparent;
  }

  .c3 p {
    text-align: center;
    font-size: 1.2rem;
    padding-bottom: 32px;
    color: var(--accent-text-color);
  }

  .c3 a {
    color: var(--accent-text-color);
    display: block;
  }
}

@media (max-height:500px) {
  .c3 {
    height: 50px;
    padding-bottom: 4px;
    padding-right: 10px;
  }

  .c3 p {
    font-size: 13px;
  }
}

@media (max-width:320px) {
  .c3 {
    font-size: 1rem;
    padding-right: 0px;
  }
}

@media (max-width:900px) {
  .c1 .CoC {
    margin-bottom: -8px;
  }
}

@media (max-width:600px) {
  .c1 .CoC {
    margin-bottom: -7px;
  }
}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {
  .c1 .welcome-to {
    display: none;
  }
}

@media (orientation:landscape) and (max-height:500px) {
  .c1 {
    height: 80px;
  }
}

@media (max-width:820px) {
  .c0 .definition-container {
    font-size: 2.2rem;
    line-height: 1.8rem;
    margin-bottom: 90px;
  }

  .c0 .definition {
    font-size: 1.7rem;
  }

  .c0 .button {
    width: 200px;
    height: 48px;
    font-size: 2.5rem;
  }

  .c0 .OR {
    width: 60px;
    height: 60px;
    margin-left: 70px;
    margin-right: 70px;
    font-size: 2rem;
  }
}

@media (max-width:700px),(max-width:900px) and (max-height:500px) {
  .c0 .definition-container {
    display: none;
  }

  .c0 .host-button {
    display: none;
  }

  .c0 .OR {
    display: none;
  }
}

<div
    class="c0 primary-background"
  >
    <header
      class="c1"
      data-testid="header"
    >
      <p
        class="welcome-to"
        data-testid="welcome-text"
      >
        WELCOME TO
      </p>
      <h1
        class="CoC"
      >
        CARDS OF CAROUSAL
      </h1>
    </header>
    <main>
      <div
        class="definition-container"
      >
        <p
          class="word"
        >
          CAROUSAL 
          <span
            class="definition"
          >
            (n)
          </span>
        </p>
        <p
          class="definition"
        >
          a wild, drunken party or celebration : a drunken revel
        </p>
      </div>
      <div
        class="button-container"
      >
        <button
          class="c2 button"
          type="button"
        >
          <p>
            JOIN
          </p>
        </button>
        <div
          class="OR"
        >
          OR
        </div>
        <button
          class="c2 button host-button"
          type="button"
        >
          <p>
            HOST
          </p>
        </button>
      </div>
    </main>
    <footer
      class="c3"
      data-testid="footer"
    >
      <p>
        Card content thanks to: 
        <a
          href="https://cardsagainsthumanity.com"
        >
          https://cardsagainsthumanity.com
        </a>
      </p>
      <p>
        Made by Odin students, with love: 
        <a
          href="https://www.theodinproject.com"
        >
          https://www.theodinproject.com
        </a>
      </p>
    </footer>
  </div>
</DocumentFragment>
`;
